--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,4 +1,4 @@
-.hero-section {
+.hero-section-home {
   height: 60vh;
   position: relative;
   display: flex;
@@ -17,7 +17,7 @@
   z-index: -1; 
 }
 
-.hero-content {
+.hero-content-home {
   background-color: rgba(0, 0, 0, 0.6);
   padding: 20px;
   border-radius: 10px;
